# idcard

./: Cargo.toml  README.md
.github/workflows/: idcard.yml
src/: main.rs
