[package]
name = "r-idcard"
version = "0.1.2"
edition = "2021"
description = "A CLI to parse chinese 18 digit idcard including region and sex."
license = "MIT"
authors = ["bujnlc8 <75124771@qq.com>"]
repository = "https://github.com/bujnlc8/idcard"
categories = ["command-line-utilities"]
keywords = ["idcard", "idcard-region"]

[dependencies]
region-cn = "0.1.9"
ureq = {version = "2.10.1", default-features = false, features = ["tls"]}


[[bin]]
name = "idcard"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true
codegen-units = 1
